--- a/data/epicuriousity_dataclean.ipynb
+++ b/data/epicuriousity_dataclean.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import warnings; warnings.simplefilter('ignore')\n",
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
@@ -177,7 +180,7 @@
    ],
    "source": [
     "# see all records in datafrae\n",
-    "df_recipes.head()"
+    "# df_recipes.head()"
    ]
   },
   {
@@ -197,9 +200,9 @@
     }
    ],
    "source": [
-    "# find total records after dropping nan\n",
+    "# drop nan records\n",
     "df = df_recipes.dropna()\n",
-    "df.shape[0]"
+    "# df.shape[0]"
    ]
   },
   {
@@ -447,7 +450,7 @@
    ],
    "source": [
     "#take a peak\n",
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
@@ -467,15 +470,224 @@
     }
    ],
    "source": [
-    "# create string for word cloud\n",
-    "word_list = []\n",
-    "df[df.tags.notnull()].tags.map(lambda x: word_list.extend(x))\n",
-    "len(word_list)\n"
+    "# describe data\n",
+    "# df.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# some calorie values are out of control! no way it's real\n",
+    "# so let's find the outliers and then remove them by using the IQR range\n",
+    "\n",
+    "q1  = df['calories'].quantile(.25)\n",
+    "q3  = df['calories'].quantile(.75)\n",
+    "iqr = q3 - q1\n",
+    "\n",
+    "df = df.loc[(df['calories'] > q1-(iqr*3)) & (df['calories'] < q3+(iqr*3))]\n",
+    "# df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove anything with zero calories\n",
+    "df.drop(df[df['calories']==0].index, inplace=True)\n",
+    "# df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to get normalized rating/define and bins\n",
+    "def get_normalized_rating(rating):\n",
+    "    if rating <1:\n",
+    "        return 0\n",
+    "    elif rating <2:\n",
+    "        return 1\n",
+    "    elif rating <3:\n",
+    "        return 2\n",
+    "    elif rating <4:\n",
+    "        return 3\n",
+    "    else:\n",
+    "        return 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a normalized rating column\n",
+    "df['rating_normalized'] = df['rating'].apply(get_normalized_rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# epifactor calculation \n",
+    "def get_epifactor(min_val, max_val, mean_val):\n",
+    "    return ((mean_val - min_val) / (max_val - min_val)) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create calorie epifactor dataframe\n",
+    "df_calorie_epifactor = df.groupby('rating_normalized')['calories'].agg(['min', 'max', 'mean'])\n",
+    "df_calorie_epifactor['epifactor'] = np.vectorize(get_epifactor)(df_calorie_epifactor['min'], df_calorie_epifactor['max'], df_calorie_epifactor['mean'])\n",
+    "# df_calorie_epifactor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create fat epifactor dataframe\n",
+    "df_fat_epifactor = df.groupby('rating_normalized')['fat'].agg(['min', 'max', 'mean'])\n",
+    "df_fat_epifactor['epifactor'] = np.vectorize(get_epifactor)(df_fat_epifactor['min'], df_fat_epifactor['max'], df_fat_epifactor['mean'])\n",
+    "# df_fat_epifactor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create protein epifactor dataframe\n",
+    "df_protein_epifactor = df.groupby('rating_normalized')['protein'].agg(['min', 'max', 'mean'])\n",
+    "df_protein_epifactor['epifactor'] = np.vectorize(get_epifactor)(df_protein_epifactor['min'], df_protein_epifactor['max'], df_protein_epifactor['mean'])\n",
+    "# df_protein_epifactor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create ingredients epifactor dataframe\n",
+    "df_ingredients_epifactor = df.groupby('rating_normalized')['ingredients_count'].agg(['min', 'max', 'mean'])\n",
+    "df_ingredients_epifactor['epifactor'] = np.vectorize(get_epifactor)(df_ingredients_epifactor['min'], df_ingredients_epifactor['max'], df_ingredients_epifactor['mean'])\n",
+    "# df_ingredients_epifactor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create ists of all epifactors\n",
+    "calorie = df_calorie_epifactor['epifactor']\n",
+    "fat = df_fat_epifactor['epifactor']\n",
+    "protein = df_fat_epifactor['epifactor']\n",
+    "ingredeints = df_ingredients_epifactor['epifactor']\n",
+    "\n",
+    "\n",
+    "# add lists into one finale epifactor dataframe\n",
+    "df_epifactor = pd.DataFrame(list(zip(calorie, fat, protein, ingredeints)), \n",
+    "               columns =['calorie_epifactor', 'fat_epifactor', 'proten_epifactor', 'ingredeints_epifactor']) \n",
+    "\n",
+    "df_epifactor.to_csv('epifactor.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create string for word cloud\n",
+    "word_list = []\n",
+    "df[df.tags.notnull()].tags.map(lambda x: word_list.extend(x))\n",
+    "len(word_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_trend_title_tag(title, tags, trend):\n",
+    "    title = title.lower()\n",
+    "    tags = [x.lower() for x in tags]\n",
+    "    \n",
+    "    if re.search(trend, title):\n",
+    "        return 1;\n",
+    "    else:\n",
+    "        if any(trend in t for t in tags):\n",
+    "            return 1;\n",
+    "        else:\n",
+    "            return 0;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test the function\n",
+    "# parse_trend_tag(\"spinach Pie\", ['one', 'pie', 'Vegetarian'], 'Vegan/Vegetarian')\n",
+    "\n",
+    "# tags = ['One two', 'TWO']\n",
+    "# tags = [x.lower() for x in tags]\n",
+    "# print(tags)\n",
+    "\n",
+    "# parse_trend_title_tag('title', tags, 'three')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['vegan'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'vegan'), axis=1)\n",
+    "df['vegetarian'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'vegetarian'), axis=1)\n",
+    "df['organic'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'organic'), axis=1)\n",
+    "df['healthy'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'healthy'), axis=1)\n",
+    "df['quick'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'quick'), axis=1)\n",
+    "df['low_carb'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'low carb'), axis=1)\n",
+    "df['low_fat'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'low fat'), axis=1)\n",
+    "df['pescatarian'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'pescatarian'), axis=1)\n",
+    "df['fat_free'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'fat free'), axis=1)\n",
+    "df['high_fiber'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'high fiber'), axis=1)\n",
+    "df['kid_friendly'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'kid-friendly'), axis=1)\n",
+    "df['kosher'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'kosher'), axis=1)\n",
+    "df['low_cal'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'low cal'), axis=1)\n",
+    "df['no_cook'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'no-cook'), axis=1)\n",
+    "df['paleo'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'paleo'), axis=1)\n",
+    "df['picnic'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'picnic'), axis=1)\n",
+    "df['easy'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'easy'), axis=1)\n",
+    "df['slow_cooker'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'slow cooker'), axis=1)\n",
+    "df['gluten_free'] = df.apply(lambda row : parse_trend_title_tag(row['title'], row['tags'], 'gluten-free'), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +700,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# let's see how those tags value up\n",
+    "df.aggregate({'vegan':['sum'], 'vegetarian': ['sum'], 'organic':['sum'], 'healthy':['sum'], 'quick': ['sum'],\n",
+    "             'low_carb': ['sum'], 'low_fat': ['sum'], 'pescatarian': ['sum'], 'fat_free': ['sum'], \n",
+    "             'high_fiber': ['sum'], 'kid_friendly': ['sum'], 'kosher': ['sum'], 'low_cal': ['sum'],\n",
+    "             'no_cook': ['sum'], 'paleo': ['sum'], 'picnic': ['sum'], 'easy': ['sum'], 'slow_cooker': ['sum'],\n",
+    "             'gluten_free': ['sum']})"
+   ]
   }
  ],
  "metadata": {
