sqlite query function added

--- a/data/SQLite Test.ipynb
+++ b/data/SQLite Test.ipynb
@@ -2,19 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import pandas as pd\n",
+    "# from flask import Flask\n",
+    "# from flask_sqlalchemy import SQLAlchemy\n",
+    "# from sqlalchemy import create_engine\n",
+    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from flask import Flask\n",
-    "from flask_sqlalchemy import SQLAlchemy\n",
-    "from sqlalchemy import create_engine"
+    "import json\n",
+    "import sqlalchemy as db\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, func, inspect\n",
+    "from flask import Flask, jsonify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -123,13 +132,160 @@
        "4      30.36056273874471  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = db.create_engine('sqlite:///epi_db.sqlite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = automap_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.prepare(engine, reflect=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspector = inspect(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epicuriousity\n",
+      "field1\n",
+      "field2\n",
+      "field3\n",
+      "field4\n",
+      "field5\n",
+      "field6\n",
+      "field7\n",
+      "field8\n",
+      "field9\n",
+      "field10\n",
+      "field11\n",
+      "field12\n",
+      "field13\n",
+      "field14\n",
+      "field15\n",
+      "field16\n",
+      "field17\n",
+      "field18\n",
+      "field19\n",
+      "field20\n",
+      "field21\n",
+      "field22\n",
+      "field23\n",
+      "field24\n",
+      "field25\n",
+      "field26\n",
+      "field27\n",
+      "field28\n",
+      "field29\n",
+      "field30\n",
+      "field31\n",
+      "field32\n",
+      "field33\n",
+      "epifactor\n",
+      "field1\n",
+      "field2\n",
+      "field3\n",
+      "field4\n",
+      "field5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import MetaData\n",
+    "m = MetaData()\n",
+    "m.reflect(engine)\n",
+    "for table in m.tables.values():\n",
+    "    print(table.name)\n",
+    "    for column in table.c:\n",
+    "        print(column.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Table('epifactor', MetaData(bind=None), Column('field1', TEXT(), table=<epifactor>), Column('field2', TEXT(), table=<epifactor>), Column('field3', TEXT(), table=<epifactor>), Column('field4', TEXT(), table=<epifactor>), Column('field5', TEXT(), table=<epifactor>), schema=None)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epifactor = db.Table('epifactor', m, autoload=True, autoload_with=engine)\n",
+    "epifactor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 'calorie_epifactor', 'fat_epifactor', 'proten_epifactor', 'ingredeints_epifactor'),\n",
+       " ('0', '17.01772966188123', '10.674006444683135', '10.674006444683135', '22.839363017934446'),\n",
+       " ('1', '21.255402076012764', '21.67548500881834', '21.67548500881834', '35.71428571428571'),\n",
+       " ('2', '24.998344918901026', '17.597791072250345', '17.597791072250345', '28.364779874213834'),\n",
+       " ('3', '23.532351767116104', '15.880520337746356', '15.880520337746356', '30.36056273874471'),\n",
+       " ('4', '25.082000759308936', '15.84669435081904', '15.84669435081904', '19.6335222393955')]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = db.select([epifactor])\n",
+    "ResultProxy = conn.execute(query)\n",
+    "ResultSet = ResultProxy.fetchall()\n",
+    "ResultSet"
    ]
   },
   {
